force-app/main/default/objects/Table__c/Table__c.object-meta.xml
<CustomObject>
    <label>Table</label>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Table Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>