force-app/main/default/objects/Table__c/fields/column__c.field-meta.xml
<CustomField>
    <fullName>column__c</fullName>
    <label>column</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>