force-app/main/default/objects/Table__c/fields/Table_Name__c.field-meta.xml
<CustomField>
    <fullName>Table_Name__c</fullName>
    <label>Table Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>